--- a/src/components/Report/report/report.css
+++ b/src/components/Report/report/report.css
@@ -1,3 +1,5 @@
 .report {
-    margin: 102px 50px 30px;
+    padding: 102px 50px 30px;
+    font-family: 'SFUIText-Regular', sans-serif;
+    background-color: #f1f1f3;
 }
