--- a/src/components/Result/result/main-result__list-item.css
+++ b/src/components/Result/result/main-result__list-item.css
@@ -1,5 +1,3 @@
 .main-result__list-item {
-    margin-top: 30px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid #F5F5F5;
+    margin-bottom: 20px;
 }
