--- a/src/components/Form/form/main-form.css
+++ b/src/components/Form/form/main-form.css
@@ -1,9 +1,12 @@
 .main-form {
     margin-left: 50px;
     margin-right: 50px;
-    width: 270px;
-    height: calc(100vh - 80px);
-    display: flex;
+    width: 320px;
+    position: fixed;
+	top: calc(50% - 300px);
+    left: 0;
+    background-color: none;
     flex-direction: column;
     justify-content: center;
+    font-family: 'SFUIText-Regular', sans-serif;
 }
