--- a/src/components/Form/form/main-form__blur-reset.css
+++ b/src/components/Form/form/main-form__blur-reset.css
@@ -6,9 +6,10 @@
     color: #BFBFBF;
     font-size: 12px;
     font-weight: 400;
-    line-height: 15px;
+    line-height: 16.8px;
+    text-align: right;
     letter-spacing: 0em;
-    margin-top: -19px;
-    margin-bottom: 12px;
+    float: right;
+    margin-top: -30px;
     cursor: pointer;
 }
