--- a/src/components/Form/form/main-form__range-number.css
+++ b/src/components/Form/form/main-form__range-number.css
@@ -7,5 +7,6 @@
     text-align-last: justify;
     color: #BFBFBF;
     margin-top: 5px;
-    margin-bottom: 34px;
+    margin-bottom: 40px;
+    display: block;
 }
