--- a/src/components/Form/form/main-form__reset.css
+++ b/src/components/Form/form/main-form__reset.css
@@ -3,14 +3,19 @@
     width: 270px;
     border-radius: 5px;
     background-color: rgba(33, 122, 255, 0.1);
-    border: none;
+    border: 1px solid rgba(33, 122, 255, 0.1);
     color: #217AFF;
     font-size: 14px;
     font-weight: 400;
-    line-height: 17px;
+    line-height: 47px;
     letter-spacing: 0em;
     text-align: center;
     padding: 0;
-    margin-top: 20px;
     cursor: pointer;
+    box-sizing: border-box;
+}
+
+.main-form__reset:hover {
+    background-color: #FFF;
+    border: 1px solid #217AFF;
 }
