--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,4 +2,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-image: url(../../images/map.png);
+    height: calc(100vh - 80px);
 }
