--- a/src/components/Report/report/report__download.css
+++ b/src/components/Report/report/report__download.css
@@ -10,10 +10,10 @@
     font-size: 14px;
     text-align: right;
     font-weight: 400;
-    line-height: 17px;
+    line-height: 20px;
     letter-spacing: 0em;
     border-radius: 5px;
     border: none;
     margin-right: 30px;
-    margin-bottom: 50px;
+    cursor: pointer;
 }
