--- a/src/components/Report/report/report__grid.css
+++ b/src/components/Report/report/report__grid.css
@@ -1,9 +1,10 @@
 .report__grid {
     display: grid;
     width: 735px;
-    grid-template-columns: 580px 114px;
+    grid-template-columns: 525px 135px;
     grid-template-rows: repeat(4, 96px);
-    grid-column-gap: 41px;
+    grid-column-gap: 25px;
     grid-row-gap: 35px;
     margin-right: 100px;
+    max-height: 540px;
 }
