--- a/src/components/Report/report/report__parametr.css
+++ b/src/components/Report/report/report__parametr.css
@@ -1,5 +1,6 @@
 .report__parametr {
     display: flex;
     flex-direction: row;
-    margin-top: 20px;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
