--- a/src/components/Report/report/report__send.css
+++ b/src/components/Report/report/report__send.css
@@ -2,7 +2,7 @@
     background-color: rgba(33, 122, 255, 0.1);
     font-size: 14px;
     font-weight: 400;
-    line-height: 17px;
+    line-height: 20px;
     letter-spacing: 0em;
     text-align: left;
     color: #217AFF;
@@ -11,4 +11,10 @@
     border-radius: 5px;
     border: none;
     text-align: center;
+    cursor: pointer;
+}
+
+.report__send:hover {
+    background-color: #FFF;
+    border: 1px solid #217AFF;
 }
