--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -1,4 +1,6 @@
 @import url(./result/main-result.css);
+@import url(./result/main-result__head.css);
+@import url(./result/main-result__reset.css);
 @import url(./result/main-result__title.css);
 @import url(./result/main-result__list.css);
 @import url(./result/main-result__list-item.css);
