--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 @import url(./card/card__header.css);
 @import url(./card/card__title.css);
+@import url(./card/card__go.css);
 @import url(./card/card__button.css);
 @import url(./card/card__list.css);
 @import url(./card/card__parametr.css);
