--- a/src/components/Report/report/report__subtitle.css
+++ b/src/components/Report/report/report__subtitle.css
@@ -5,7 +5,6 @@
     letter-spacing: 0em;
     text-align: left;
     color: #26303F;
-    margin-top: 0;
-    margin-bottom: 30px;
+    margin: 0;
     font-family: 'SFProDisplay-Regular', sans-serif;
 }
