--- a/src/components/SliderCard/slider-card/slider-card__parametr-name.css
+++ b/src/components/SliderCard/slider-card/slider-card__parametr-name.css
@@ -1,9 +1,10 @@
-.report__text {
+.slider-card__parametr-name {
+    width: 120px;
+    color: #BFBFBF;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
     letter-spacing: 0em;
     text-align: left;
-    color: #BFBFBF;
-    margin-top: 30px;
+
 }
