--- a/src/components/SliderCard/slider-card/slider-card__parametr.css
+++ b/src/components/SliderCard/slider-card/slider-card__parametr.css
@@ -1,6 +1,5 @@
-.report__parametr {
+.slider-card__parametr {
     display: flex;
     flex-direction: row;
-    margin-top: 0;
     margin-bottom: 20px;
 }
